[tool.poetry]
name = "opencv-game"
version = "0.1.0"
description = ""
authors = ["hoshi23 <star.tokyo0310@gmail.com>"]
readme = "README.md"
packages = [{include = "opencv_game"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.3"
opencv-python = "^4.7.0.72"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
